Поправил съезд полей в модельном окне

--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
         <div class="contacts">
           <b class="contacts-name">Nerds design studio</b>
           <address class="contacts-addres">
-            191186, Санкт-Петербург,
-            <br> ул. Б. Конюшенная, д. 19/8
+		    <p>191186, Санкт-Петербург,<br> 
+			  ул. Б. Конюшенная, д. 19/8
+			</p>
           </address>
           <p class="contacts-tel">тел. +7 (812) 275-75-75</p>
           <a class="button write-button" href="#user-form">Напишите нам</a>
@@ -203,9 +204,8 @@
 	    </p>
       </div>
       <p class="user-message">
-        <label for="user-message">Текст письма:
-          <textarea name="user-message" id="user-message" required>В свободной форме</textarea>
-		</label>
+        <label for="user-message">Текст письма:</label>
+        <textarea name="user-message" id="user-message" required>В свободной форме</textarea>
       </p>
       <input type="submit" class="button write-button" name="user-submit" id="user-submit" value="Отправить">
     </form>
