--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
               <div class="toggle toggle-max"></div>
             </div>
             <div class="price-controls">
-              <label class="min-price" for="min-price">от </label>
+              <label class="min-price" for="min-price">от</label>
               <input name="min-price" id="min-price" type="text" value="0">
               <label class="max-price" for="max-price">до</label>
               <input name="max-price" id="max-price" type="text" value="15000">
@@ -244,10 +244,9 @@
 	    </p>
       </div>
       <p class="user-message">
-        <label for="user-message">Текст письма:
-          <textarea name="user-message" id="user-message" required>В свободной форме</textarea>
-		</label>
-      </p>
+        <label for="user-message">Текст письма:</label>
+        <textarea name="user-message" id="user-message" required>В свободной форме</textarea>
+	  </p>
       <input type="submit" class="button write-button" name="user-submit" id="user-submit" value="Отправить">
     </form>
   </section>
