--- a/catalog.html
+++ b/catalog.html
@@ -56,16 +56,16 @@
           <legend>Сетка:</legend>
           <ul class="list-layout list-unstyled">
             <li>
-              <label class="radio-control" for="adaptive"><span class="radio-control-indicator"></span>Адаптивная</label>
-              <input type="radio" class="visually-hidden" name="layout" id="adaptive" value="adaptive" checked>
+              <input type="radio" class="radio-control-indicator visually-hidden" name="layout" id="adaptive" value="adaptive" checked>
+			  <label class="radio-control" for="adaptive">Адаптивная</label>
             </li>
             <li>
-              <label class="radio-control" for="fixed"><span class="radio-control-indicator"></span>Фиксированная</label>
-              <input type="radio" class="visually-hidden" name="layout" id="fixed" value="fixed">
+              <input type="radio" class="radio-control-indicator visually-hidden" name="layout" id="fixed" value="fixed">
+			  <label class="radio-control" for="fixed">Фиксированная</label>
             </li>
             <li>
-              <label class="radio-control" for="elastic"><span class="radio-control-indicator"></span>Резиновая</label>
-              <input type="radio" class="visually-hidden" name="layout" id="elastic" value="elastic">
+              <input type="radio" class="radio-control-indicator visually-hidden" name="layout" id="elastic" value="elastic">
+			  <label class="radio-control" for="elastic">Резиновая</label>
             </li>
           </ul>
         </fieldset>
@@ -73,24 +73,24 @@
           <legend>Особенности:</legend>
           <ul class="list-features list-unstyled">
             <li>
-              <label class="checkbox-control" for="slider"><span class="checkbox-control-indicator"></span>Слайдер</label>
-              <input type="checkbox" class="visually-hidden" name="slider" id="slider" checked>
+              <input type="checkbox" class="checkbox-control-indicator visually-hidden" name="slider" id="slider" checked>
+			  <label class="checkbox-control" for="slider">Слайдер</label>
             </li>
             <li>
-              <label class="checkbox-control" for="features"><span class="checkbox-control-indicator"></span>Блок преимуществ</label>
-              <input type="checkbox" class="visually-hidden" name="features" id="features">
+              <input type="checkbox" class="checkbox-control-indicator visually-hidden" name="features" id="features">
+			  <label class="checkbox-control" for="features">Блок преимуществ</label>
             </li>
             <li>
-              <label class="checkbox-control" for="news"><span class="checkbox-control-indicator"></span>Новости</label>
-              <input type="checkbox" class="visually-hidden" name="news" id="news" checked>
+              <input type="checkbox" class="checkbox-control-indicator visually-hidden" name="news" id="news" checked>
+			  <label class="checkbox-control" for="news">Новости</label>
             </li>
             <li>
-              <label class="checkbox-control" for="gallery"><span class="checkbox-control-indicator"></span>Галерея</label>
-              <input type="checkbox" class="visually-hidden" name="gallery" id="gallery">
+              <input type="checkbox" class="checkbox-control-indicator visually-hidden" name="gallery" id="gallery">
+			  <label class="checkbox-control" for="gallery">Галерея</label>
             </li>
             <li>
-              <label class="checkbox-control" for="cart"><span class="checkbox-control-indicator"></span>Корзина</label>
-              <input type="checkbox" class="visually-hidden" name="cart" id="cart"> 
+              <input type="checkbox" class="checkbox-control-indicator visually-hidden" name="cart" id="cart"> 
+			  <label class="checkbox-control" for="cart">Корзина</label>
             </li>
           </ul>
         </fieldset>
