--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Нёрдс</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/style.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -29,9 +29,9 @@
   <section class="slider">
     <div class="container">
       <h2 class="visually-hidden">Преимущества</h2>
-      <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-      <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-      <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+      <input class="visually-hidden product-1" type="radio" id="product-1" name="toggle" checked>
+      <input class="visually-hidden product-2" type="radio" id="product-2" name="toggle">
+      <input class="visually-hidden product-3" type="radio" id="product-3" name="toggle">
       <div class="slider-controls">
         <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
         <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
@@ -143,9 +143,7 @@
         <div class="contacts">
           <b class="contacts-name">Nerds design studio</b>
           <address class="contacts-addres">
-		    <p>191186, Санкт-Петербург,<br> 
-			  ул. Б. Конюшенная, д. 19/8
-			</p>
+            191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           </address>
           <p class="contacts-tel">тел. +7 (812) 275-75-75</p>
           <a class="button write-button" href="#user-form">Напишите нам</a>
@@ -197,11 +195,11 @@
         <p>
           <label for="user-name">Ваше имя:</label>
           <input type="text" name="user-name" id="user-name" placeholder="Имя Фамилия" required>
-		</p>
+        </p>
         <p>
           <label class="lbl-email" for="user-email">Ваш e-mail:</label>
           <input type="email" name="user-email" id="user-email" placeholder="email@example.com" required>
-	    </p>
+        </p>
       </div>
       <p class="user-message">
         <label for="user-message">Текст письма:</label>
