--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс - каталог</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -118,9 +118,7 @@
           <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
           <div class="catalog-item-details">
             <a href="#"><h3>Sedona</h3></a>
-            <p class="catalog-text">Информационный сайт
-              <br>для туристов
-            </p>
+            <p class="catalog-text">Информационный сайт для&nbsp;туристов</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
         </li>
@@ -136,8 +134,7 @@
           <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
           <div class="catalog-item-details">
             <a href="#"><h3>Barbershop</h3></a>
-            <p>Сайт салоны красоты.
-              <br>Для мужчин, да.</p>
+            <p>Сайт салоны красоты. Для&nbsp;мужчин,&nbsp;да.</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
         </li>
@@ -145,8 +142,7 @@
           <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
           <div class="catalog-item-details">
             <a href="#"><h3>Mishka</h3></a>
-            <p class="catalog-text">Интернет-магазин
-              <br>вязаных игрушек</p>
+            <p class="catalog-text">Интернет-магазин вязаных&nbsp;игрушек</p>
             <a class="button" href="#">9 900 руб</a>
           </div>
         </li>
@@ -187,7 +183,7 @@
             191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           </address>
           <p class="contacts-tel">тел. +7 (812) 275-75-75</p>
-          <a class="button write-button" href="#user-form">Напишите нам</a>
+          <a class="button write-button" href="writeus.html">Напишите нам</a>
         </div>
       </div>
       <img class="visually-hidden" src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
