--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -146,7 +146,7 @@
             191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           </address>
           <p class="contacts-tel">тел. +7 (812) 275-75-75</p>
-          <a class="button write-button" href="#user-form">Напишите нам</a>
+          <a class="button write-button" href="writeus.html">Напишите нам</a>
         </div>
       </div>
       <img class="visually-hidden" src="img/map.jpg" width="1440" height="416" alt="Мы на карте">
